--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,14 @@
     <p>------------------------------------------------------------------</p>
     <h2><%= post.title %></h2>
     <p><%= post.text %></p>
+    <em>by 
+      <% if session[:user_id].nil? %>
+        <%= "*****" %> 
+        <%= link_to "(Sign in to see)", signin_path %>
+      <% else %>
+        <%= "#{post.user.name}" %>
+      <% end %>
+    </em>
   <% end %>
   <p>------------------------------------------------------------------</p>
 </div>
