Add some UI features

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:username, @username) %>
 <div>
   <% @posts.each do |post| %>
     <p>------------------------------------------------------------------</p>
