--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
       <% else %>
           <%= link_to "Sign out", signout_path, method: "delete" %>
           <%= link_to "New post", new_post_path %>
+          Welcome, <%= yield(:username) %>
       <% end %>
+
     </div>
     <%= yield %>
     <%= debug(params) if Rails.env.development? %>
