--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,25 @@
   </head>
 
   <body>
-    <div>
-      <%= link_to "Home", root_url %>
-      <% if session[:user_id].nil? %>
-          <%= link_to "Sign in", signin_path %>
-      <% else %>
-          <%= link_to "Sign out", signout_path, method: "delete" %>
-          <%= link_to "New post", new_post_path %>
-          Welcome, <%= yield(:username) %>
-      <% end %>
-
-    </div>
+    <header class="navbar navbar-fixed-top">
+      <div class="container">
+        <%= link_to "Members Only!", root_path, id: "logo" %>
+        
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to yield(:username), "#" unless session[:user_id].nil? %></li>
+            <li><%= link_to "All posts", root_url %></li>
+            <% if session[:user_id].nil? %>
+                <li><%= link_to "Sign in", signin_path %></li>
+            <% else %>
+                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+                <li><%= link_to "New post", new_post_path %></li>
+                
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <%= yield %>
     <%= debug(params) if Rails.env.development? %>
   </body>
