--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,13 @@
 <% if @user && @user.errors.full_messages.any? %>
-  <h3>Error!!</h3>
-    <% @user.errors.full_messages.each do |msg| %>
-    <p><%= msg %></p>
+  <div class="alert alert-danger" role="alert">
+  <% @user.errors.full_messages.each do |msg| %>
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+    <%= msg %><br>
   <% end %>
-  <p>--------------------------------------------------</p>
+  </div>
 <% end %>
 
-
+<div class="form">
 <%= form_for :user, url: users_path do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br>
@@ -20,5 +21,6 @@
   <%= f.label :password_confimartion, "Confirmation" %>
   <%= f.password_field :password_confirmation %><br>
 
-  <%= f.submit "Submit"%>
+  <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
 <% end %>
+</div>
