--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
         
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to yield(:username), "#" unless session[:user_id].nil? %></li>
+            <li><%= link_to yield(:username),
+                    root_url(name: yield(:username)) \
+                      unless session[:user_id].nil? %></li>
             <li><%= link_to "All posts", root_url %></li>
             <% if session[:user_id].nil? %>
                 <li><%= link_to "Sign in", signin_path %></li>
