--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,20 +7,21 @@
   </div>
 <% end %>
 
-<div class="form">
-<%= form_for :user, url: users_path do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
+<h1>Sign up</h1>
+  <div class="form">
+  <%= form_for :user, url: users_path do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %><br>
+    <%= f.label :email %>
+    <%= f.email_field :email %><br>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
+    <%= f.label :password %>
+    <%= f.password_field :password %><br>
 
-  <%= f.label :password_confimartion, "Confirmation" %>
-  <%= f.password_field :password_confirmation %><br>
+    <%= f.label :password_confimartion, "Confirmation" %>
+    <%= f.password_field :password_confirmation %><br>
 
-  <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
-<% end %>
+    <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
+  <% end %>
 </div>
