--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form">
 <% provide(:username, @username) %><br>
 <%= form_for :post, url: posts_path do |f| %>
   <%= f.label :title %>
@@ -6,5 +7,6 @@
   <%= f.label :text %>
   <%= f.text_area :text %><br>
 
-  <%= f.submit "Submit"%>
+  <%= f.submit "Submit", class: "btn btn-primary btn-lg"%>
 <% end %>
+</div>
