--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
+<% provide(:username, @username) %>
+<h1>New Post</h1>
 <div class="form">
-<% provide(:username, @username) %><br>
 <%= form_for :post, url: posts_path do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
