--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   </div>
 <% end %>
 
-<h1>Sign up</h1>
+<h1>Sign Up</h1>
   <div class="form">
   <%= form_for :user, url: users_path do |f| %>
     <%= f.label :name %>
