--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,8 @@
   <% provide(:title, "My Posts") %>
 <% end %>
 
+<%= will_paginate %>
+
 <% @posts.each do |post| %>
   <div class="post">
     <h2><%= post.title %></h2>
@@ -22,3 +24,4 @@
   </div>
 <% end %>
 
+<%= will_paginate %>
