Add CSS to pagination

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,3 +114,12 @@ h2 {
   height: 12em;
   margin-bottom: 12px;
 }
+
+.pagination {
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+#postboard {
+  margin-bottom: 20px;
+}
