--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,16 +7,16 @@
   <div class="form">
   <%= form_for :user, url: users_path do |f| %>
     <%= f.label :name %>
-    <%= f.text_field :name %><br>
+    <%= f.text_field :name %>
 
     <%= f.label :email %>
-    <%= f.email_field :email %><br>
+    <%= f.email_field :email %>
 
     <%= f.label :password %>
-    <%= f.password_field :password %><br>
+    <%= f.password_field :password %>
 
     <%= f.label :password_confimartion, "Confirmation" %>
-    <%= f.password_field :password_confirmation %><br>
+    <%= f.password_field :password_confirmation %>
 
     <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
   <% end %>
